# model_train

./: .gitignore  base_notebook.ipynb  convert_roboflow.ipynb  detect.ipynb  pyproject.toml
keras_model/: augumentation.ipynb  create_dataset.ipynb  crop.ipynb  get_dataset.py  magikclew.ipynb  segmentation.ipynb
