[tool.poetry]
name = "model-train"
version = "0.1.0"
description = ""
authors = ["RomanZorkin <zorkin.roman@gmail.com>"]
readme = "README.md"
packages = [{include = "model_train"}]

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
ipykernel = "^6.15.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
